[tool.poetry]
name = "secrettunnel"
version = "0.1.1"
description = "A terminal-based sidescroller game with a secret twist"
authors = ["ShadowDrums <122622018+ShadowDrums@users.noreply.github.com>"]
maintainers = [
    "ShadowDrums <122622018+ShadowDrums@users.noreply.github.com>",
    "DJ Stomp <85457381+DJStompZone@users.noreply.github.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorama = "^0.4.6"
blessed = "^1.20.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
